src/e/util/Bag.java: take advantage of Java 5's cache of Integer objects.